Implement dashboard that shows active kimai records of a fixed user

--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,7 @@
 DEBUG=1
 SECRET_KEY=foo
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+
+KIMAI_HOST=kimai2_nginx_1
+KIMAI_X-AUTH-USER=test user
+KIMAI_X-AUTH-TOKEN=testapitoken
