--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,6 +10,8 @@ services:
       - 8000
     env_file:
       - .env.prod
+    networks:
+      - kimai2_default
   nginx:
     build: nginx/
     ports:
@@ -18,6 +20,12 @@ services:
       - web
     volumes:
       - static_volume:/home/app/staticfiles
+    networks:
+      - kimai2_default
 
 volumes:
   static_volume:
+
+networks:
+  kimai2_default:
+    external: true
