--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,28 @@ version: '3.8'
 services:
   web:
     build: django/
-    command: sh -c "python manage.py collectstatic --noinput && python manage.py runserver 0.0.0.0:8000"
-    ports:
-      - 8000:8000
+    command: sh -c "python manage.py collectstatic --noinput && gunicorn current_task_display.wsgi:application --bind 0.0.0.0:8000"
+    volumes:
+      - static_volume:/home/app/staticfiles
+    expose:
+      - 8000
     env_file:
-      - .env.dev
+      - .env.prod
     networks:
       - kimai2_default
+  nginx:
+    build: nginx/
+    ports:
+      - 1337:80
+    depends_on:
+      - web
+    volumes:
+      - static_volume:/home/app/staticfiles
+    networks:
+      - kimai2_default
+
+volumes:
+  static_volume:
 
 networks:
   kimai2_default:
